@@ -1,11 +1,9 @@
 {
-  "timestamp" : "2022-05-08T01:26:31Z",
-  "count" : 24,
-  "count_minmax" : [ 0, 24 ],
-  "count_prev_day_inc" : 7,
-  "count_prev_day_dec" : 0,
-  "uniques" : 8,
-  "uniques_minmax" : [ 0, 8 ],
-  "uniques_prev_day_inc" : 4,
-  "uniques_prev_day_dec" : 0
+  "timestamp" : "2022-05-21T16:24:04Z",
+  "count" : 5,
+  "count_minmax" : [ 5, 24 ],
+  "count_decinc" : [ -19, +0 ],
+  "uniques" : 3,
+  "uniques_minmax" : [ 3, 8 ],
+  "uniques_decinc" : [ -5, +0 ]
 }
