@@ -1,16 +1,16 @@
 {
-  "timestamp" : "2022-05-21T01:12:51Z",
+  "timestamp" : "2022-05-21T16:24:04Z",
   "count_outdated" : 202,
   "uniques_outdated" : 130,
-  "count" : 270,
-  "uniques" : 160,
+  "count" : 251,
+  "uniques" : 155,
   "clones" : [
     {
       "timestamp": "2022-05-07T00:00:00Z",
-      "count": 24,
-      "count_minmax": [ 24, 24 ],
-      "uniques": 8,
-      "uniques_minmax": [ 8, 8 ]
+      "count": 5,
+      "count_minmax": [ 5, 24 ],
+      "uniques": 3,
+      "uniques_minmax": [ 3, 8 ]
     },
     {
       "timestamp": "2022-05-08T00:00:00Z",
