@@ -1,11 +1,11 @@
 {
-  "count": 68,
-  "uniques": 14,
+  "count": 49,
+  "uniques": 13,
   "clones": [
     {
       "timestamp": "2022-05-07T00:00:00Z",
-      "count": 24,
-      "uniques": 8
+      "count": 5,
+      "uniques": 3
     },
     {
       "timestamp": "2022-05-08T00:00:00Z",
