@@ -1,3 +1,10 @@
+2022-05-21T16:24:04Z:
+* notice: last 14d: unq all: 13 49
+* notice: prev accum: outdated-unq outdated-all / unq all: 130 202 / 160 270
+* notice: next accum: outdated-unq outdated-all / unq all: 130 202 / 155 251
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -5 -19 / +0 +0 -5 -19 / 3 5
+* notice: changed dates: [2022-05-07]
+
 2022-05-21T01:12:51Z:
 * notice: last 14d: unq all: 14 68
 * notice: prev accum: outdated-unq outdated-all / unq all: 124 193 / 154 262
